[package]
name = "ethers-iqkms"
version = "0.0.0"
description = "Support library for using iqkms as an Ethereum signer for ethers-rs"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/ethers-iqkms"
categories = ["cryptography::cryptocurrencies"]
keywords = ["iqkms", "kms"]
rust-version = "1.64"
edition = "2021"
readme = "README.md"

[dependencies]
async-trait = "0.1"
ethers-core = { git = "https://github.com/gakonst/ethers-rs.git" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs.git" }
iqkms = { version = "0", path = "../iqkms", features = ["ethereum"] }
tracing = "0.1.37"
