[package]
name = "iqkms-ethereum"
version = "0.0.1"
description = "gRPC service for computing Ethereum signatures using keys stored in iqkms"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/iqkms-ethereum"
categories = ["cryptography::cryptocurrencies"]
keywords = ["iqkms", "kms"]
rust-version = "1.64"
edition = "2021"
readme = "README.md"

[dependencies]
proto = { package = "iqkms-proto", version = "0.0.1", path = "../iqkms-proto" }
signing = { package = "iqkms-signing", version = "0.0.1", path = "../iqkms-signing", features = ["ethereum"] }
types = { package = "iqkms-types", version = "0.0.1", path = "../iqkms-types", features = ["ethereum"] }

# 3rd party dependencies
tonic = "0.8"
tracing = "0.1.37"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
