[package]
name = "iqkms-proto"
version = "0.0.1"
description = "iqkms Protocol Buffers type definitions and schema"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/iqkms-proto"
categories = ["cryptography", "data-structures", "encoding"]
keywords = ["iqkms", "kms"]
rust-version = "1.64"
edition = "2021"
readme = "README.md"

[dependencies]
prost = "0.11"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
