[package]
name = "iqkms-signing"
version = "0.0.0"
edition = "2021"

[dependencies.crypto]
package = "iq-crypto"
version = "0"
features = ["ecdsa", "getrandom", "sha2", "std"]
path = "../iq-crypto"

# optional dependencies
[dependencies]
types = { package = "iqkms-types", version = "0", optional = true, path = "../iqkms-types" }

base16ct = { version = "0.1", optional = true, features = ["alloc"] }

[features]
ethereum = ["base16ct", "crypto/sha3", "secp256k1", "types/ethereum"]
secp256k1 = ["crypto/secp256k1"]
