[package]
name = "iqkms-signing"
version = "0.0.0"
description = """
Signing service and keyring manager for producing digital signatures using
keys stored in iqkms
"""
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/iqkms-signing"
categories = ["cryptography"]
keywords = ["iqkms", "kms"]
rust-version = "1.64"
edition = "2021"
readme = "README.md"

[dependencies.crypto]
package = "iq-crypto"
version = "0"
features = ["ecdsa", "getrandom", "sha2", "std"]
path = "../iq-crypto"

# optional dependencies
[dependencies]
types = { package = "iqkms-types", version = "0", optional = true, path = "../iqkms-types" }

base16ct = { version = "0.1", optional = true, features = ["alloc"] }

[features]
ethereum = ["base16ct", "crypto/sha3", "secp256k1", "types/ethereum"]
secp256k1 = ["crypto/secp256k1"]
