[package]
name = "iqkms-signing"
version = "0.0.1"
description = """
Signing service and keyring manager for producing digital signatures using
keys stored in iqkms
"""
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/iqkms-signing"
categories = ["cryptography"]
keywords = ["iqkms", "kms"]
rust-version = "1.85"
edition = "2024"
readme = "README.md"

[dependencies.crypto]
package = "iq-crypto"
version = "0.0.1"
features = ["ecdsa", "getrandom", "sha2", "std"]
path = "../iq-crypto"

[dependencies]
tower = "0.4"

# optional dependencies
types = { package = "iqkms-types", version = "0.0.1", optional = true, path = "../iqkms-types" }

[features]
ethereum = ["crypto/sha3", "secp256k1", "types/ethereum"]
secp256k1 = ["crypto/secp256k1"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
