[package]
name = "iqkms-types"
version = "0.0.0"
edition = "2021"

[dependencies]
crypto = { package = "iq-crypto", version = "0", optional = true, path = "../iq-crypto" }

base16ct = { version = "0.1", optional = true, features = ["alloc"] }
ethereum-types = { version = "0.13", optional = true, default-features = false }

[features]
ethereum = ["base16ct", "crypto/secp256k1", "crypto/sha3", "ethereum-types"]
