[package]
name = "iqkms-types"
version = "0.0.1"
description = """
Type definitions which can be shared between client and server components
of iqkms
"""
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/iqkms-types"
categories = ["cryptography"]
keywords = ["iqkms", "kms"]
rust-version = "1.64"
edition = "2021"
readme = "README.md"

[dependencies]
crypto = { package = "iq-crypto", version = "0.0.1", optional = true, path = "../iq-crypto" }

# 3rd party dependencies
hex = { package = "base16ct", version = "0.1", optional = true, features = ["alloc"] }
ethereum-types = { version = "0.13", optional = true, default-features = false }

[features]
ethereum = ["crypto/secp256k1", "crypto/sha3", "ethereum-types", "hex"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
