[package]
name = "iqkms"
version = "0.0.0"
edition = "2021"

[dependencies]
proto = { package = "iqkms-proto", version = "0", path = "../iqkms-proto" }

tokio = { version = "1", features = ["full"] }
tonic = "0.8"

# optional dependencies
types = { package = "iqkms-types", version = "0", optional = true, path = "../iqkms-types" }

[features]
ethereum = ["types/ethereum"]
