[package]
name = "iqkms"
version = "0.0.1"
description = """
Rust gRPC client library for *iqkms*: a cryptographic key management service
providing a gRPC API and support for a variety of key storage methods.
"""
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
homepage = "https://github.com/iqlusioninc/iqkms/"
repository = "https://github.com/iqlusioninc/iqkms/tree/main/ethers-iqkms"
categories = ["cryptography"]
keywords = ["iqkms", "kms"]
rust-version = "1.64"
edition = "2021"
readme = "README.md"

[dependencies]
proto = { package = "iqkms-proto", version = "0.0.1", path = "../iqkms-proto" }

tokio = { version = "1", features = ["full"] }
tonic = "0.8"

# optional dependencies
types = { package = "iqkms-types", version = "0.0.1", optional = true, path = "../iqkms-types" }

[features]
ethereum = ["types/ethereum"]
